[package]
name = "os_stat"
version = "0.1.0"
authors = ["Krouton <krouton@hatena.ne.jp>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["linux", "os"]
categories = ["os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"