[package]
name = "os_stat"
version = "0.1.0"
authors = ["Krouton <hi.in.knium@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["linux", "os"]
categories = ["os"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
repository = "https://github.com/Krout0n/os-stat-rs"
description = "A library to get system metrics like cpu load and memory usage"

[dependencies]
libc = "0.2"
